<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview_recipe_steps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:id="@+id/linearview_recipe_steps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <!-- show recipe image if there is one -->
    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/receipt_image_hight"
        android:layout_gravity="center"
        android:visibility="visible"
        android:src="@drawable/recipe"/>

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/receipt_title_size"
            android:textAlignment="center"
            android:text="Recipe name"
            android:padding="@dimen/padding"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/textview_recipe_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ingredient_title_size"
            android:textAlignment="center"
            android:text="@string/ingredients_label"
            android:padding="@dimen/padding"
            android:textColor="@color/colorAccent"/>

        <!-- Recipe ingredients Recycler view -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_ingredient_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/ingredient_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/no_data_text_size"
            android:layout_gravity="center"
            android:text="@string/no_ingredient_data"
            android:visibility="gone"
            />

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dadada"
            />

        <TextView
            android:id="@+id/textview_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/step_title_size"
            android:textAlignment="center"
            android:text="@string/steps_label"
            android:padding="@dimen/padding"
            android:textColor="@color/colorAccent"
            />

        <!-- Recipe Steps Recycler view-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_steps_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_below="@+id/textview_steps"
         />

        <TextView
            android:id="@+id/steps_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/no_data_text_size"
            android:layout_gravity="center"
            android:text="@string/no_step_data"
            android:visibility="gone"
            />

    </LinearLayout>

</ScrollView>