<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <LinearLayout
        android:id="@+id/fragment_recipe_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp">

        <!-- if there is recipe image, we display it -->
        <ImageView
            android:id="@+id/recipe_thumbNailImage"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:visibility="visible"
            android:contentDescription="recipe"
            android:src="@drawable/recipe"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/text_no_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/no_video"
            android:visibility="gone"
            android:layout_marginTop="40dp"
            android:gravity="center"/>

        <!-- Recipe Video -->

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/recipe_step_video"
            android:layout_width="match_parent"
            android:layout_height="300dp"

            />

        <!-- Step instructions: get from Step's description -->
        <TextView
            android:id="@+id/recipe_step_instructions"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:textSize="22sp"
            android:padding="8dp"/>
    </LinearLayout>

    <!-- Buttons to go to previous step OR to the next step -->

        <LinearLayout
            android:id="@+id/buttons_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/fragment_recipe_detail"
            android:orientation="horizontal"
            android:layout_gravity="bottom|center"
            android:paddingLeft="22dp"
            android:paddingRight="22dp">


            <Button
                android:id="@+id/button_previous"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="previous"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:layout_gravity="center"/>


            <Button
                android:id="@+id/button_next"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="next"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:layout_gravity="center"/>

        </LinearLayout>



</RelativeLayout>

</ScrollView>
